# OneRClone

./: .gitignore  CMakeLists.txt  README.md  main.7z  main.cpp  resources.qrc
model/: Config.h  Job.cpp  Job.h  Manager.cpp  SharedSettings.cpp  SharedSettings.h
resources/: logo.ai  resources.qrc
resources/assets/: logo.ai
src/: appconfig.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mountservice.cpp  mountservice.h  servicelistdelegate.cpp  servicelistdelegate.h  servicelistmodel.cpp  servicelistmodel.h  settingsmanager.cpp  settingsmanager.h
view/: JobWidget.cpp  JobWidget.h  JobWidget.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui
